# cmd/api/api.go
@@ -86,12 +86,12 @@ func IntiApi(db *sql.DB) {
 
 		r.Route("/message", func(r chi.Router) {
 			r.Use(HandleJWTAuth)
-			r.Get("/{message_id}", apiService.GetMessageByMessageId)
+			r.Get("/get/{message_id}", apiService.GetMessageByMessageId)
 			// r.Post("/upload-media/{friendship_id}",)
 			r.Post("/ws/{friendship_id}", apiService.MessageWsHandler)
 			r.Get("/get-messages/{friendship_id}", apiService.GetMessages)
 			r.Get("/search-messages/{friendship_id}", apiService.SearchMessages)
-			r.Delete("/{message_id}", apiService.DeleteMessageByMessageId)
+			r.Delete("/delete/{message_id}", apiService.DeleteMessageByMessageId)
 		})
 
 		r.Route("/media", func(r chi.Router) {
